# incoma

./: .gitignore  CMakeLists.txt  README.md
incoma-test1/: CMakeLists.txt  main.cpp
incoma-test2/: CMakeLists.txt
incoma-test2/include/: LogFileDumper.h  Logger.h  LoggerController.h  LoggerProvider.h  LoggerWidget.h  MainWindow.h  SafeThreadContainer.h
incoma-test2/src/: DataClient.cpp  LogFileDumper.cpp  Logger.cpp  LoggerController.cpp  LoggerProvider.cpp  LoggerWidget.cpp  LoggerWidget.ui  MainWindow.cpp  MainWindow.ui  SafeThreadContainer.cpp  main.cpp
test2/include/: DataClient.h  DataServer.h  Logger.h
test2/src/: DataServer.cpp  LoggerProvider.cpp  MainWindow.cpp  main.cpp
