CMAKE_MINIMUM_REQUIRED (VERSION 3.4.3)
SET (PROJECT incoma-test2)
PROJECT (${PROJECT})

SET (CMAKE_AUTOMOC ON)
SET (CMAKE_AUTOUIC ON)
SET (CMAKE_CXX_STANDARD 11)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET (SOURCES
        ${SRC_DIR}/main.cpp
    )

FIND_PACKAGE (Qt5 COMPONENTS Widgets Concurrent Network)

IF (APPLE)
    SET (CMAKE_OSX_ARCHITECTURES "x86_64")
ENDIF (APPLE)

ADD_EXECUTABLE (${PROJECT} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES (${PROJECT} Qt5::Widgets Qt5::Concurrent Qt5::Network)

IF (APPLE)
ADD_CUSTOM_COMMAND (TARGET ${PROJECT}
        POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_BINARY_DIR}/${PROJECT}.app/Contents/MacOS
        COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/${PROJECT}.app/Contents/MacOS
        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/${PROJECT} ${CMAKE_BINARY_DIR}/${PROJECT}.app/Contents/MacOS/
    )

ADD_CUSTOM_TARGET (run
        COMMAND open ${CMAKE_BINARY_DIR}/${PROJECT}.app
    )
ADD_DEPENDENCIES (run ${PROJECT})
ENDIF (APPLE)
